--- a/3ra-preentrega/css/style.scss
+++ b/3ra-preentrega/css/style.scss
@@ -5,7 +5,7 @@
         cursor: pointer;
     }
     .img-car{
-        height:15rem;
-        object-fit: contain;
+        height:100%;
+        object-fit: cover;
     }
 }
